<resources>
    <string name="app_name">DetectiveApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forget_password">forget password</string>
    <string name="sign_in_button">sign in</string>
    <string name="Dont_have_an_account">Don\'t have an account? Create an account</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="sign_up_now">sign up now</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email">Email</string>
    <string name="rewrite_password">Rewrite Password</string>
    <string name="sign_up">sign up</string>
    <string name="by_clicking_create_new_account">By clicking Create new account, you agree to the following terms and conditions without reservation</string>
    <string name="forgot_the_password">forgot the password</string>
    <string name="lorem">lorem</string>
    <string name="check_email">check email</string>
    <string name="check_code">check code</string>
    <string name="add_check_code">add check code</string>
    <string name="create_new_password">create new Password</string>
    <string name="change_password">change password</string>
    <string name="home">home</string>
    <string name="following">following</string>
    <string name="search">search</string>
    <string name="cases">cases</string>
    <string name="setting">setting</string>
    <string name="search_for_someone">search for someone</string>
    <string name="lost_someone">Lost Someone</string>
    <string name="found_someone">Found Someone</string>
    <string name="creat_case">creat case</string>
    <string name="create_case">create case</string>
    <string name="details">Details</string>
    <string name="do_you_have_any_information_about_him">Do you have any information about him ?</string>
    <string name="you_can_call_his_parent_and_help_them">you can call his parent and help them</string>
    <string name="call">call</string>
    <string name="possible_details">possible details</string>
    <string name="wating_cases">wating cases</string>
    <string name="found">Found</string>
    <string name="delete">delete</string>
    <string name="add_picture_for_birthdate">add picture for birthdate</string>
    <string name="birth_date">Birth Date</string>
    <string name="description">Description</string>
    <string name="parent_address">Parent Address</string>
    <string name="parent_name">Parent Name</string>
    <string name="parent_phone">Parent Phone</string>
    <string name="parent_id">Parent ID</string>
    <string name="parent_details">Parent Details</string>
    <string name="name">Name</string>
    <string name="your_details">Your Details</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="log_out">Log out</string>
    <string name="add_child_photo">add child Photo</string>
    <string name="city">city</string>
    <string name="capital">Capital</string>
    <string name="age">Age</string>
    <string name="person_national_id">Person National Id</string>


    <string-array name="languages">
        <item>English</item>
        <item>German</item>
        <item>Ehglish</item>
    </string-array>
</resources>