<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.edit_profile.EditProfileFragment">


    <Button
        android:id="@+id/btn_sign_up_button"
        style="@style/ShapeAppearance.App.SmallComponent"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dark_grey"
        android:fontFamily="@font/din_next_arabic_medium"
        android:text="@string/change_password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailInputLayout" />

    <Button
        android:id="@+id/btn_save_changes"
        style="@style/ShapeAppearance.App.SmallComponent"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/din_next_arabic_medium"
        android:text="@string/save_changes"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSecondNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="name"
        android:focusedByDefault="true"
        android:hint="@string/second_name"
        android:textColorHint="@color/textColorHint"
        app:boxBackgroundColor="@color/boxBackgroundColor"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/etFirstNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etFirstNameInputLayout"
        app:layout_constraintTop_toTopOf="@+id/etFirstNameInputLayout"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecondName"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:fontFamily="@font/din_next_arabic_medium"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFirstNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="emailAddress"
        android:focusedByDefault="true"
        android:hint="@string/first_name"
        android:textColorHint="@color/textColorHint"
        app:boxBackgroundColor="@color/boxBackgroundColor"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/etSecondNameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:fontFamily="@font/din_next_arabic_medium"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="emailAddress"
        android:focusedByDefault="true"
        android:hint="@string/email"
        android:textColorHint="@color/textColorHint"
        app:boxBackgroundColor="@color/boxBackgroundColor"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstNameInputLayout"
        tools:targetApi="o">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:fontFamily="@font/din_next_arabic_medium"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/boxBackgroundColor"
        app:cardCornerRadius="100dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialCardView3">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:rotation="180"
            android:src="@drawable/ic_back" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="10dp"
        android:fontFamily="@font/din_next_arabic_medium"
        android:text="@string/edit_profile"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="@+id/back" />

</androidx.constraintlayout.widget.ConstraintLayout>